// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> component Render property with error 1`] = `
<div
  className="form__field form__field--error"
>
  <Input
    className="error"
    disabled={false}
    name="name"
    placeholder="placeholder"
    prefix={false}
    type="text"
  />
  <FormikConnect(ErrorMessageImpl)
    component="div"
    name="name"
  />
</div>
`;

exports[`<FormField /> component Render property without error 1`] = `
<div
  className="form__field"
>
  <Input
    className="error"
    disabled={false}
    name="name"
    placeholder="placeholder"
    prefix={false}
    type="text"
  />
  <FormikConnect(ErrorMessageImpl)
    component="div"
    name="name"
  />
</div>
`;
